fix visibility detection

--- a/source/resource/designs/tile/basic.scss
+++ b/source/resource/designs/tile/basic.scss
@@ -514,8 +514,13 @@ body {
                 }
             }
         }
-        &:not([open]) > *:not(summary) {
-            visibility: collapse;
+        &:not([open]) > *:not(summary):not(.has-popup) {
+            display: none;
+        }
+
+        /* we cannot use display:none for these elements, because then the popup would never be visible */
+        &:not([open]) > *:not(summary).has-popup {
+            visibility: hidden;
             width: 0;
             height: 0;
         }
